tests/requests/invalid/005.py
from restkit.errors import InvalidHeaderName
request = InvalidHeaderName